--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ repositories {
 dependencies {
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     api 'org.apache.commons:commons-math3:3.6.1'
+    compile 'javax.ws.rs:jsr311-api:1.1.1'
+    implementation 'javax.ws.rs:jsr311-api:1.1.1'
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:21.0'
