--- a/build.gradle
+++ b/build.gradle
@@ -8,16 +8,20 @@
 
 // Apply the java-library plugin to add support for Java Library
 apply plugin: 'java-library'
-
+buildscript{
 // In this section you declare where to find the dependencies of your project
 repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
 }
-
+}
 dependencies {
     compile 'javax.ws.rs:jsr311-api:1.1.1'
     testImplementation 'junit:junit:4.12'
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.0'
 }
 
